# interview-drill

./: README.md  pyproject.toml
sql/ddl/: q12_ddl.sql  q15_ddl.sql  q1_ddl.sql  q2_ddl.sql  q5_ddl.sql
sql/dml/: q12_solution.sql  q15_solution.sql  q1_solution.sql  q2_solution.sql  q5_solution.sql
sql/tests/: q12_tests.sql  q15_tests.sql  q1_tests.sql  q2_tests.sql  q5_tests.sql
src/main/python/: q10_runner.py  q10_solution.py  q13_runner.py  q13_solution.py  q4_runner.py  q4_solution.py  q7_runner.py  q7_solution.py  q8_runner.py  q8_solution.py
src/test/python/: test_q10.py  test_q13.py  test_q4.py  test_q7.py  test_q8.py
theory/: q11.txt  q14.txt  q3.txt  q6.txt  q9.txt
